# PharmaBot-ROS2

./: .gitignore  GUIDE_INSTALL_ROS2_UBUNTU.md  GUIDE_TEST_SIMPLE_APP.md  Guide_Linux_ROS.docx  LICENSE  README.md  RUNBOOK_UBUNTU_A_Z.md
pharmabot_ws/: README.md
pharmabot_ws/src/pharmabot_system/: package.xml  setup.cfg  setup.py
pharmabot_ws/src/pharmabot_system/config/: pharmacy_service_goals.json
pharmabot_ws/src/pharmabot_system/launch/: pharmabot_calibration.launch.py  pharmabot_demo.launch.py  pharmabot_hospital_world.launch.py  pharmabot_nav2_integration.launch.py  pharmabot_ui.launch.py
pharmabot_ws/src/pharmabot_system/maps/: pharmacy_map.pgm  pharmacy_map.yaml
pharmabot_ws/src/pharmabot_system/pharmabot_system/: dashboard_node.py  goal_calibrator_node.py  nav_task_executor_node.py  request_generator_node.py  rt_types.py  scheduler_node.py  task_executor_node.py  ui_server_node.py  watchdog_node.py
pharmabot_ws/src/pharmabot_system/worlds/: hospital_pharmacy.sdf
