<?xml version="1.0"?>
<package format="3">
  <name>pharmabot_system</name>
  <version>0.1.0</version>
  <description>PharmaBot ROS2 project with real-time scheduling simulation.</description>
  <maintainer email="student@example.com">PharmaBot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>

  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
